<resources>
  <string name="activity_type_airplane"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for airplane.">
    airplane
  </string>
  <string name="activity_type_atv"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ATV (All Terrain Vehicles).">
    ATV
  </string>
  <string name="activity_type_biking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for biking.">
    biking
  </string>
  <string name="activity_type_blimp"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for blimp.">
    blimp
  </string>
  <string name="activity_type_boat"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for boat.">
    boat
  </string>
  <string name="activity_type_climbing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for climbing.">
    climbing
  </string>
  <string name="activity_type_commercial_airplane"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for commercial airplane.">
    commercial airplane
  </string>
  <string name="activity_type_cross_country_skiing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for cross-country skiing.">
    cross-country skiing
  </string>
  <string name="activity_type_cycling"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for cycling.">
    cycling
  </string>
  <string name="activity_type_dirt_bike"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for dirt bike.">
    dirt bike
  </string>
  <string name="activity_type_donkey_back_riding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for donkey back riding.">
    donkey back riding
  </string>
  <string name="activity_type_driving"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for driving.">
    driving
  </string>
  <string name="activity_type_driving_bus"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for driving bus.">
    driving bus
  </string>
  <string name="activity_type_driving_car"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for driving car.">
    driving car
  </string>
  <string name="activity_type_ferry"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ferry.">
    ferry
  </string>
  <string name="activity_type_frisbee"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for frisbee.">
    frisbee
  </string>
  <string name="activity_type_gliding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for gliding.">
    gliding
  </string>
  <string name="activity_type_hang_gliding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for hang gliding.">
    hang gliding
  </string>
  <string name="activity_type_helicopter"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for helicopter.">
    helicopter
  </string>
  <string name="activity_type_hiking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for hiking.">
    hiking
  </string>
  <string name="activity_type_horse_back_riding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for horse back riding.">
    horse back riding
  </string>
  <string name="activity_type_hot_air_balloon"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for hot air balloon.">
    hot air balloon
  </string>
  <string name="activity_type_ice_sailing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ice sailing.">
    ice sailing
  </string>
  <string name="activity_type_inline_skating"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for inline skating.">
    inline skating
  </string>
  <string name="activity_type_kayaking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for kayaking.">
    kayaking
  </string>
  <string name="activity_type_kite_surfing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for kite surfing.">
    kite surfing
  </string>
  <string name="activity_type_land_sailing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for land sailing.">
    land sailing
  </string>
  <string name="activity_type_mixed_type"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for mixed type.">
    mixed type
  </string>
  <string name="activity_type_motor_bike"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for motor bike.">
    motor bike
  </string>
  <string name="activity_type_motor_boating"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for motor boating.">
    motor boating
  </string>
  <string name="activity_type_mountain_biking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for mountain biking.">
    mountain biking
  </string>
  <string name="activity_type_off_trail_hiking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for off trail hiking.">
    off trail hiking
  </string>
  <string name="activity_type_other"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for other.">
    other
  </string>
  <string name="activity_type_paddling"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for paddling.">
    paddling
  </string>
  <string name="activity_type_para_gliding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for para gliding.">
    para gliding
  </string>
  <string name="activity_type_rc_airplane"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for RC (Remote Controlled) airplane.">
    RC airplane
  </string>
  <string name="activity_type_rc_boat"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for RC (Remote Controlled) boat.">
    RC boat
  </string>
  <string name="activity_type_rc_helicopter"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for RC (Remote Controlled) helicopter.">
    RC helicopter
  </string>
  <string name="activity_type_riding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for riding.">
    riding
  </string>
  <string name="activity_type_road_biking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for road biking.">
    road biking
  </string>
  <string name="activity_type_roller_skiing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for roller skiing.">
    roller skiing
  </string>
  <string name="export_google_fusion_tables_private"
    translation_description="When exporting a track to Google Fusion Tables, the option to export as
      a new private table as opposed to a new public table.">
    as new private table
  </string>
  <string name="export_google_fusion_tables_public"
    translation_description="When exporting a track to Google Fusion Tables, the option to export as
      a new public table as opposed to a new private table.">
    as new public table
  </string>
  <string name="export_google_maps_public"
    translation_description="When exporting a track to Google Maps, the option to export as a new
      public map as opposed to a new unlisted map.">
    as new public map
  </string>
  <string name="export_google_maps_unlisted"
    translation_description="When exporting a track to Google Maps, the option to export as a new
      unlisted map as opposed to a new public map.">
    as new unlisted map
  </string>
  <string name="menu_delete"
    translation_description="In the menu, to delete a track or a marker.

      Character limit: ~20 (1 line)">
    Delete
  </string>
  <string name="menu_edit"
    translation_description="In the menu, to edit a track or a marker.

      Character limit: ~20 (1 line)">
    Edit
  </string>
  <string name="menu_insert_marker"
    translation_description="In the menu, to insert a marker.

      Character limit: ~20 (1 line)">
    Insert marker
  </string>
  <string name="menu_insert_photo"
    translation_description="In the menu, to insert a photo.

      Character limit: ~20 (1 line)">
    Insert photo
  </string>
  <string name="menu_markers"
    translation_description="In the menu, to show a list of markers for the current track.

      Character limit: ~20 (1 line)">
    Markers
  </string>
  <string name="menu_sensor_state"
    translation_description="In the menu, to go to the sensor state page.

      Character limit: ~20 (1 line)">
    Sensor state
  </string>
  <string name="menu_settings"
    translation_description="In the menu, to go to the settings page.

      Character limit: ~20 (1 line)">
    Settings
  </string>
  <string name="menu_share"
    translation_description="In the menu, to share a track.

      Character limit: ~20 (1 line)">
    Share
  </string>
  <string name="menu_show_on_map"
    translation_description="In the menu, to show a track or a marker on the map.

      Character limit: ~20 (1 line)">
    Show on map
  </string>
  <string name="menu_split_frequency"
    translation_description="In the menu, to configure the split frequency, how frequent to insert a
      split marker.

      Character limit: ~20 (1 line)">
    Split frequency
  </string>
  <string name="menu_view_photo"
    translation_description="In the menu, to view a photo.

      Character limit: ~20 (1 line)">
    View photo
  </string>
  <string name="menu_voice_frequency"
    translation_description="In the menu, to configure the voice frequency, how frequent to announce
      status.

      Character limit: ~20 (1 line)">
    Voice frequency
  </string>
</resources>